# Kursach_4_vacancy-parser

./: .gitignore  README.md  main.py  pyproject.toml  settings.py  vacancy.py
data_json/: vacancies.json
file_handler/: base.py  json_handler.py
parser/: base.py  hh.py  sj.py
utils/: exchange_rates_api.py  user_interface.py
